crabbing-interpreters/tests/testsuite/snapshots/testsuite__tests__cases__use_local_in_initialiser_of_shadowing_variable.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - tests/cases/use_local_in_initialiser_of_shadowing_variable.lox
---
success: true
exit_code: 0
----- stdout -----
42
42

----- stderr -----
